[package]
name = "greed-rs"
version = "0.1.0"
authors = ["Greed <greedengineer4321@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.2"
imgui = "0.4.0"
imgui-winit-support = "0.4.0"
imgui-wgpu-rs={ git = "https://github.com/greedengineer/imgui-wgpu-rs.git" }
wgpu = "0.6.0"
clipboard = "0.5.0"
futures = "0.3.5"
